[gd_scene load_steps=3 format=2]

[ext_resource path="res://garb_banana.png" type="Texture" id=1]
[ext_resource path="res://garbage.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="garb_banana" type="Sprite" parent="."]
position = Vector2( -1.50143, -5.71191 )
texture = ExtResource( 1 )
